Fix a pair of typos in debian/control.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4233 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Package: libsbuf6
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD string buffer library
- This library provide a way to handle string buffers. It contains
+ This library provides a way to handle string buffers. It contains
  numerous functions such as append, copy, cat, print, trim whitespace
  characters, etc.
 
@@ -31,7 +31,7 @@ Section: debian-installer
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD string buffer library (udeb)
- This library provide a way to handle string buffers. It contains
+ This library provides a way to handle string buffers. It contains
  numerous functions such as append, copy, cat, print, trim whitespace
  characters, etc.
  .
