kvm_size_t_kludge.diff: Temporary kludge to define size_t (requires kfreebsd-kernel-headers >= 0.81).  (Closes: #673431)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4267 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 7), pkg-config,
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-31) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
- kfreebsd-kernel-headers (>= 0.73) [kfreebsd-any],
+ kfreebsd-kernel-headers (>= 0.81) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
  libexpat-dev [kfreebsd-any],
 # libncurses5-dev: needed by libalias
@@ -158,7 +158,8 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-any
-Depends: libkvm0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
+Depends: libkvm0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev,
+ kfreebsd-kernel-headers (>= 0.81),
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
