Fix FTBFS with latest kfreebsd-kernel-headers.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4273 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 7), pkg-config,
  libexpat-dev [kfreebsd-any],
 # libncurses5-dev: needed by libalias
  libncurses5-dev [kfreebsd-any],
+ freebsd-glue,
 Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.9.2
