* Upload to unstable * Fix 'warning: implicit declaration of function 'reallocf'   (and several other functions) (Closes: 685625) * Make that warning an error so that it does not pass silently   in the future
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4380 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,8 @@ major		:= $(shell echo $(version) | sed -e 's/\..*//g')
 revision	:= $(shell echo $(full_version) | sed -e 's/^[^+-]*//g')
 
 CFLAGS = -Wall -g -pipe -fPIC -I. -I$(CURDIR)/sys -D_GNU_SOURCE \
-         -D__va_list=__builtin_va_list
+         -D__va_list=__builtin_va_list \
+	 -Werror=implicit-function-declaration
 
 ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
