--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,7 @@ revision	:= $(shell echo $(full_version) | sed -e 's/^[^+-]*//g')
 
 CFLAGS = -Wall -g -pipe -fPIC -I. -I$(CURDIR)/sys -D_GNU_SOURCE \
          -D__va_list=__builtin_va_list \
+	-D__FreeBSD_version=__FreeBSD_kernel_version \
 	 -I/usr/include/freebsd \
 	 -Werror=implicit-function-declaration
 
