Comment out rest of libelf/libdwarf lines
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4755 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -170,8 +170,8 @@ clean:
 	dh_testdir
 	dh_testroot
 	$(PMAKE) -C $(CURDIR)/lib/libsbuf clean
-	$(PMAKE) -C $(CURDIR)/lib/libdwarf clean
-	$(PMAKE) -C $(CURDIR)/lib/libelf clean
+#	$(PMAKE) -C $(CURDIR)/lib/libdwarf clean
+#	$(PMAKE) -C $(CURDIR)/lib/libelf clean
 ifeq ($(kernel), kfreebsd)
 	$(PMAKE) -C $(CURDIR)/lib/libcam clean
 	$(PMAKE) -C $(CURDIR)/lib/libnetgraph clean
@@ -197,8 +197,8 @@ install: build
 
 	mkdir -p $(DESTDIR)/lib $(DESTDIR)/usr/lib $(DESTDIR)/usr/include $(DESTDIR)/usr/share/man/man3
 	$(PMAKE) -C $(CURDIR)/lib/libsbuf install SHLIBDIR=/lib
-	$(PMAKE) -C $(CURDIR)/lib/libdwarf install SHLIBDIR=/usr/lib
-	$(PMAKE) -C $(CURDIR)/lib/libelf install SHLIBDIR=/usr/lib
+#	$(PMAKE) -C $(CURDIR)/lib/libdwarf install SHLIBDIR=/usr/lib
+#	$(PMAKE) -C $(CURDIR)/lib/libelf install SHLIBDIR=/usr/lib
 ifeq ($(kernel), kfreebsd)
 	$(PMAKE) -C $(CURDIR)/lib/libcam install SHLIBDIR=/usr/lib
 	$(PMAKE) -C $(CURDIR)/lib/libgeom install SHLIBDIR=/lib
