--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Build-Depends: debhelper (>= 7), pkg-config,
 # libncurses5-dev: needed by libalias
  libncurses5-dev [kfreebsd-any],
  freebsd-glue (>= 0.0.8~),
-Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
-Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
+Vcs-Browser: http://anonscm.debian.org/viewvc/glibc-bsd/trunk/freebsd-libs/
+Vcs-Svn: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.9.2
 
 Package: libsbuf6
