Create $(DESTDIR) on install-indep
Otherwise dh_install with --list-missing is unhappy (arguably a bug
in debhelper).


git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4823 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -197,6 +197,7 @@ install-indep: build-indep
 	dh_prep -i
 	dh_installdirs -i
 
+	mkdir -p $(DESTDIR)
 	dh_install -i --list-missing
 
 install-arch: build-arch
