--- a/debian/control
+++ b/debian/control
@@ -47,39 +47,39 @@ Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
 
-#Package: libdwarf3
-#Architecture: any
-#Depends: ${shlibs:Depends}, ${misc:Depends}
-#Description: library to consume and produce DWARF debug information (FreeBSD version)
-# The libdwarf package provides a shared library which allows reading/consumer
-# and writing/producer of DWARF debugging information from object files, shared
-# libraries, and executables.
+Package: libdwarf-freebsd-3
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: library to consume and produce DWARF debug information (FreeBSD version)
+ The libdwarf package provides a shared library which allows reading/consumer
+ and writing/producer of DWARF debugging information from object files, shared
+ libraries, and executables.
 
-#Package: libdwarf3-dev
-#Section: libdevel
-#Architecture: any
-#Depends: libdwarf3 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
-#Conflicts: libdwarf-dev
-#Description: Development files for libdwarf (FreeBSD version)
-# This package contains the header files and static library needed to
-# compile applications that use libdwarf.
+Package: libdwarf-freebsd-dev
+Section: libdevel
+Architecture: any
+Depends: libdwarf-freebsd-3 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
+Conflicts: libdwarf-dev
+Description: Development files for libdwarf (FreeBSD version)
+ This package contains the header files and static library needed to
+ compile applications that use libdwarf.
 
-#Package: libelf-freebsd-1
-#Architecture: any
-#Depends: ${shlibs:Depends}, ${misc:Depends}
-#Description: library to consume and produce DWARF debug information (FreeBSD version)
-# The libdwarf package provides a shared library which allows reading/consumer
-# and writing/producer of DWARF debugging information from object files, shared
-# libraries, and executables.
+Package: libelf-freebsd-1
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: library to consume and produce DWARF debug information (FreeBSD version)
+ The libdwarf package provides a shared library which allows reading/consumer
+ and writing/producer of DWARF debugging information from object files, shared
+ libraries, and executables.
 
-#Package: libelf-freebsd-dev
-#Section: libdevel
-#Architecture: any
-#Depends: libelf-freebsd-1 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
-#Conflicts: libelf-dev, libelfg0-dev
-#Description: Development files for libdwarf (FreeBSD version)
-# This package contains the header files and static library needed to
-# compile applications that use libdwarf.
+Package: libelf-freebsd-dev
+Section: libdevel
+Architecture: any
+Depends: libelf-freebsd-1 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
+Conflicts: libelf-dev, libelfg0-dev
+Description: Development files for libdwarf (FreeBSD version)
+ This package contains the header files and static library needed to
+ compile applications that use libdwarf.
 
 Package: libcam6
 Architecture: kfreebsd-any
