--- a/debian/rules
+++ b/debian/rules
@@ -48,8 +48,8 @@ get-orig-source:
 	mkdir -p $(ORIGDIR)/sys/kern
 	mkdir -p $(ORIGDIR)/sys/sys
 	for i in lib/libcam lib/libdevstat lib/libgeom lib/libipx \
-		$(shell # lib/libelf ) \
-		$(shell # lib/libdwarf ) \
+		lib/libelf \
+		lib/libdwarf \
 	         lib/libkiconv lib/libnetgraph lib/libjail \
 	         lib/libkvm lib/libmemstat lib/libsbuf lib/libusb \
 	         lib/libusbhid sys/cam \
@@ -70,7 +70,7 @@ get-orig-source:
 	tar --numeric-owner --owner 0 --group 0 -czf ../$(TARNAME) $(ORIGDIR)
 	rm -rf $(ORIGDIR)
 
-BUILD_ARCH_TARGETS = build-sbuf # build-dwarf build-elf
+BUILD_ARCH_TARGETS = build-sbuf build-dwarf build-elf
 
 ifeq ($(kernel), kfreebsd)
 BUILD_ARCH_TARGETS += \
@@ -171,8 +171,8 @@ clean:
 	dh_testdir
 	dh_testroot
 	$(PMAKE) -C $(CURDIR)/lib/libsbuf clean
-#	$(PMAKE) -C $(CURDIR)/lib/libdwarf clean
-#	$(PMAKE) -C $(CURDIR)/lib/libelf clean
+	$(PMAKE) -C $(CURDIR)/lib/libdwarf clean
+	$(PMAKE) -C $(CURDIR)/lib/libelf clean
 ifeq ($(kernel), kfreebsd)
 	$(PMAKE) -C $(CURDIR)/lib/libcam clean
 	$(PMAKE) -C $(CURDIR)/lib/libnetgraph clean
@@ -207,8 +207,8 @@ install-arch: build-arch
 
 	mkdir -p $(DESTDIR)/lib $(DESTDIR)/usr/lib $(DESTDIR)/usr/include $(DESTDIR)/usr/share/man/man3
 	$(PMAKE) -C $(CURDIR)/lib/libsbuf install SHLIBDIR=/lib
-#	$(PMAKE) -C $(CURDIR)/lib/libdwarf install SHLIBDIR=/usr/lib
-#	$(PMAKE) -C $(CURDIR)/lib/libelf install SHLIBDIR=/usr/lib
+	$(PMAKE) -C $(CURDIR)/lib/libdwarf install SHLIBDIR=/usr/lib
+	$(PMAKE) -C $(CURDIR)/lib/libelf install SHLIBDIR=/usr/lib
 ifeq ($(kernel), kfreebsd)
 	$(PMAKE) -C $(CURDIR)/lib/libcam install SHLIBDIR=/usr/lib
 	$(PMAKE) -C $(CURDIR)/lib/libgeom install SHLIBDIR=/lib
