Make libelf and libdwarf kfreebsd-any.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5102 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -48,7 +48,7 @@ Description: Development files for libsbuf
  compile applications that use libsbuf.
 
 Package: libdwarf-freebsd-3
-Architecture: any
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: library to consume and produce DWARF debug information (FreeBSD version)
  The libdwarf package provides a shared library which allows reading/consumer
@@ -57,7 +57,7 @@ Description: library to consume and produce DWARF debug information (FreeBSD ver
 
 Package: libdwarf-freebsd-dev
 Section: libdevel
-Architecture: any
+Architecture: kfreebsd-any
 Depends: libdwarf-freebsd-3 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Conflicts: libdwarf-dev
 Description: Development files for libdwarf (FreeBSD version)
@@ -65,7 +65,7 @@ Description: Development files for libdwarf (FreeBSD version)
  compile applications that use libdwarf.
 
 Package: libelf-freebsd-1
-Architecture: any
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: library to read and write ELF files
  The libelf package provides a shared library which allows reading and
@@ -73,7 +73,7 @@ Description: library to read and write ELF files
 
 Package: libelf-freebsd-dev
 Section: libdevel
-Architecture: any
+Architecture: kfreebsd-any
 Depends: libelf-freebsd-1 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Conflicts: libelf-dev, libelfg0-dev
 Description: Development files for libelf (FreeBSD version)
