--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 7), pkg-config,
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-31) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
- kfreebsd-kernel-headers (>= 9.1) [kfreebsd-any],
+ kfreebsd-kernel-headers (>= 9.2~5) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
  libexpat-dev [kfreebsd-any],
 # libncurses5-dev: needed by libalias
@@ -80,6 +80,21 @@ Conflicts: libelf-dev, libelfg0-dev
 Description: Development files for libelf (FreeBSD version)
  This package contains the header files and static library needed to
  compile applications that use libelf.
+
+Package: libutil-freebsd-9
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: FreeBSD utility library
+ Miscellaneous system facilities.
+
+Package: libutil-freebsd-dev
+Section: libdevel
+Architecture: any
+Depends: libutil-freebsd-9 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
+Replaces: freebsd-glue (>= 0.0.15~)
+Description: Development files for libutil-freebsd
+ This package contains the header files and static library needed to
+ compile applications that use libutil-freebsd.
 
 Package: libcam6
 Architecture: kfreebsd-any
