--- a/debian/rules
+++ b/debian/rules
@@ -29,10 +29,10 @@ else
 endif
 
 SOURCE = freebsd-libs
-SVN		:= http://svn.freebsd.org/base/release/$(version).0
-#SVN		:= http://svn.freebsd.org/base/releng/$(version)
-#SVN		:= http://svn.freebsd.org/base/stable/$(major)
-#SVN		:= http://svn.freebsd.org/base/head
+SVN		:= https://svn0.us-west.freebsd.org/base/release/$(version).0
+#SVN		:= https://svn0.us-west.freebsd.org/base/releng/$(version)
+#SVN		:= https://svn0.us-west.freebsd.org/base/stable/$(major)
+#SVN		:= https://svn0.us-west.freebsd.org/base/head
 ORIGDIR = $(SOURCE)-$(tar_version)
 TARNAME = $(SOURCE)_$(tar_version).orig.tar.gz
 
