--- a/debian/patches/makefiles.diff
+++ b/debian/patches/makefiles.diff
@@ -1,3 +1,22 @@
+--- a/lib/libgeom/Makefile
++++ b/lib/libgeom/Makefile
+@@ -1,6 +1,7 @@
+ # $FreeBSD$
+ 
+ LIB=	geom
++SHLIB_MAJOR= 1
+ SHLIBDIR?= /lib
+ SRCS+=	geom_getxml.c
+ SRCS+=	geom_stats.c
+@@ -16,6 +17,8 @@
+ DPADD=	${LIBBSDXML} ${LIBSBUF}
+ LDADD=	-lbsdxml -lsbuf
+ 
++LDADD+=	-L../libsbuf/ -lrt -lbsd
++
+ MAN=	libgeom.3
+ 
+ MLINKS+= \
 --- a/lib/libutil/Makefile
 +++ b/lib/libutil/Makefile
 @@ -5,18 +5,22 @@
