--- a/debian/patches/makefiles.diff
+++ b/debian/patches/makefiles.diff
@@ -48,8 +48,10 @@
  CFLAGS+= -DLIBC_SCCS
  
  .if ${MK_INET6_SUPPORT} != "no"
---- a/lib/libkvm/Makefile
-+++ b/lib/libkvm/Makefile
+Index: freebsd-libs-9.2+ds2/lib/libkvm/Makefile
+===================================================================
+--- freebsd-libs-9.2+ds2.orig/lib/libkvm/Makefile	2013-12-08 23:51:03.057927202 +0100
++++ freebsd-libs-9.2+ds2/lib/libkvm/Makefile	2013-12-08 23:51:03.033927203 +0100
 @@ -4,6 +4,7 @@
  LIB=	kvm
  SHLIBDIR?= /lib
@@ -58,3 +60,18 @@
  
  .if exists(${.CURDIR}/kvm_${MACHINE_ARCH}.c)
  KVM_ARCH=${MACHINE_ARCH}
+Index: freebsd-libs-9.2+ds2/lib/libipx/Makefile
+===================================================================
+--- freebsd-libs-9.2+ds2.orig/lib/libipx/Makefile	2013-12-08 23:51:03.057927202 +0100
++++ freebsd-libs-9.2+ds2/lib/libipx/Makefile	2013-12-08 23:51:35.729926664 +0100
+@@ -7,6 +7,10 @@
+ MAN=	ipx.3
+ MLINKS+=ipx.3 ipx_addr.3 ipx.3 ipx_ntoa.3
+ 
++# for <netipx/ipx.h>
++CFLAGS+=	-I../../sys
++INCS+=		../../sys/netipx/ipx.h
++
+ WARNS?=	2
+ 
+ .include <bsd.lib.mk>
