--- a/debian/rules
+++ b/debian/rules
@@ -28,6 +28,13 @@ else
 	CFLAGS += -O2
 endif
 
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+
+	# Do not mess with MAKEFLAGS until we transfer control to BSD make (see below)
+	BSD_MAKEFLAGS += -j$(NUMJOBS)
+endif
+
 SOURCE = freebsd-libs
 SVN		:= https://svn0.us-west.freebsd.org/base/release/$(version).0
 #SVN		:= https://svn0.us-west.freebsd.org/base/releng/$(version)
@@ -38,7 +45,9 @@ TARNAME = $(SOURCE)_$(tar_version).orig.tar.gz
 
 PATH := /usr/lib/freebsd:$(PATH)
 DESTDIR = $(CURDIR)/debian/tmp
-PMAKE = COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS) -I$(CURDIR)/debian/local/include" NO_WERROR=1 NOGCCERROR=1 \
+PMAKE = \
+	MAKEFLAGS=$(BSD_MAKEFLAGS) \
+	COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS) -I$(CURDIR)/debian/local/include" NO_WERROR=1 NOGCCERROR=1 \
         NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) make
 kernel = $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 
