--- a/debian/control
+++ b/debian/control
@@ -5,10 +5,11 @@ Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Robert Millan <rmh@debian.org>
 Build-Depends: debhelper (>= 7), pkg-config,
  freebsd-buildutils (>= 9.0-3~),
+ freebsd-mk (>= 10.0-2~),
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-31) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
- kfreebsd-kernel-headers (>= 9.2~5) [kfreebsd-any],
+ kfreebsd-kernel-headers (>= 10.0~2) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
  libexpat-dev [kfreebsd-any],
 # libncurses5-dev: needed by libalias
@@ -167,7 +168,7 @@ Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
 
-Package: libusb2debian
+Package: libusb3
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD userspace USB programming library
@@ -177,7 +178,7 @@ Description: FreeBSD userspace USB programming library
 Package: libusb2-dev
 Section: libdevel
 Architecture: kfreebsd-any
-Depends: libusb2debian (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev,
+Depends: libusb3 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev,
 Provides: libusb-1.0-0-dev
 Conflicts: libusb-dev
 Description: Development files for libusb2
@@ -187,7 +188,7 @@ Description: Development files for libusb2
  It should be API compatible with both libusb-1.0 and libusb-0.1
  used on Linux.
 
-Package: libusb2debian-udeb
+Package: libusb3-udeb
 Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
@@ -198,7 +199,7 @@ Description: Development files for libusb2 (udeb)
  .
  This is a minimal package for use in debian-installer.
 
-Package: libkvm0
+Package: libkvm6
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD kvm (kernel memory interface) library
@@ -208,7 +209,7 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-any
-Depends: libkvm0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev,
+Depends: libkvm6 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev,
  kfreebsd-kernel-headers (>= 0.81),
 Description: Development files for libkvm
  This package contains the header files and static library needed to
