--- a/debian/patches/makefiles.diff
+++ b/debian/patches/makefiles.diff
@@ -19,7 +19,7 @@
  MLINKS+= \
 --- a/lib/libutil/Makefile
 +++ b/lib/libutil/Makefile
-@@ -5,18 +5,22 @@
+@@ -5,15 +5,11 @@
  
  .include <bsd.own.mk>
  
@@ -27,7 +27,7 @@
 +LIB=	util-freebsd
  SHLIB_MAJOR= 9
  
- SRCS=	_secure_path.c expand_number.c flopen.c fparseln.c gr_util.c \
+ SRCS=	_secure_path.c auth.c expand_number.c flopen.c fparseln.c gr_util.c \
 -	hexdump.c humanize_number.c kinfo_getfile.c kinfo_getfile.c \
 -	kinfo_getallproc.c kinfo_getproc.c kinfo_getvmmap.c kld.c \
 -	login_auth.c login_cap.c \
@@ -37,22 +37,26 @@
  	stub.c trimdomain.c uucplock.c
  INCS=	libutil.h login_cap.h
  
-+SYS!=   dpkg-architecture -qDEB_HOST_GNU_SYSTEM
-+.if ${SYS} == "kfreebsd-gnu"
+@@ -25,6 +21,14 @@
+ 
+ CFLAGS+= -I${.CURDIR} -I${.CURDIR}/../libc/gen/
+ 
++OS!=	dpkg-architecture -qDEB_HOST_GNU_SYSTEM
++.if ${OS} == "kfreebsd-gnu"
 +SRCS+=	login_cap.c login_class.c \
 +	pidfile.c
 +.endif
 +
-+LDADD=	-lbsd -lfreebsd-glue
++LDADD= -lbsd -lfreebsd-glue
 +
- CFLAGS+= -DLIBC_SCCS
- 
- .if ${MK_INET6_SUPPORT} != "no"
+ MAN+=	expand_number.3 flopen.3 fparseln.3 hexdump.3 \
+ 	humanize_number.3 kinfo_getallproc.3 kinfo_getfile.3 \
+ 	kinfo_getproc.3 kinfo_getvmmap.3 kld.3 login_auth.3 login_cap.3 \
 --- a/lib/libkvm/Makefile
 +++ b/lib/libkvm/Makefile
-@@ -4,6 +4,7 @@
- LIB=	kvm
+@@ -5,6 +5,7 @@
  SHLIBDIR?= /lib
+ SHLIB_MAJOR=	6
  CFLAGS+=-DLIBC_SCCS -I${.CURDIR}
 +LDADD= -lbsd -lfreebsd-glue
  
@@ -71,3 +75,14 @@
  WARNS?=	2
  
  .include <bsd.lib.mk>
+--- a/lib/libelf/Makefile
++++ b/lib/libelf/Makefile
+@@ -61,7 +61,7 @@
+ # problems when a header file in sys depends on a file in another
+ # part of the tree, e.g. a machine dependent header.
+ #
+-SRCS+=	sys/elf32.h sys/elf64.h sys/elf_common.h
++#SRCS+=	sys/elf32.h sys/elf64.h sys/elf_common.h
+ 
+ GENSRCS=	libelf_fsize.c libelf_msize.c libelf_convert.c
+ CLEANFILES=	${GENSRCS}
