--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Robert Millan <rmh@debian.org>
 Build-Depends: debhelper (>= 7), pkg-config,
- freebsd-buildutils (>= 9.0-3~),
+ bmake (>= 20131001-4~),
  freebsd-mk (>= 10.0-2~),
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-31) [kfreebsd-any],
