--- a/debian/rules
+++ b/debian/rules
@@ -49,7 +49,7 @@ CFLAGS += -I$(CURDIR)/debian/local/include
 PMAKE_COMMON = \
 	MAKEFLAGS=$(BSD_MAKEFLAGS) \
 	NO_WERROR=1 NOGCCERROR=1 \
-        NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) make
+        NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) bmake
 PMAKE = \
 	CFLAGS="$(CFLAGS)" \
 	$(PMAKE_COMMON)
