Prepare Makefile.inc to be moved into orig tarball.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5387 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -49,7 +49,10 @@ CFLAGS += -I$(CURDIR)/debian/local/include
 PMAKE_COMMON = \
 	MAKEFLAGS=$(BSD_MAKEFLAGS) \
 	NO_WERROR=1 NOGCCERROR=1 \
-        NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) bmake
+        NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) \
+	bmake \
+	SHLIB_MAJOR=0 \
+	$(NULL)
 PMAKE = \
 	CFLAGS="$(CFLAGS)" \
 	$(PMAKE_COMMON)
@@ -73,6 +76,7 @@ get-orig-source:
 	         lib/libusbhid sys/cam \
 		lib/libutil \
 		lib/libalias sys/netinet/libalias sys/modules/libalias \
+		lib/Makefile.inc \
 	         sys/kern/subr_sbuf.c \
 	         sys/sys/sbuf.h \
 		sys/netipx/ipx.h \
