Refresh patches for 10.1
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5507 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/patches/makefiles.diff
+++ b/debian/patches/makefiles.diff
@@ -3,7 +3,7 @@ Index: freebsd-libs/lib/libgeom/Makefile
 --- freebsd-libs.orig/lib/libgeom/Makefile
 +++ freebsd-libs/lib/libgeom/Makefile
 @@ -1,6 +1,7 @@
- # $FreeBSD$
+ # $FreeBSD: stable/10/lib/libgeom/Makefile 192376 2009-05-19 12:10:48Z trasz $
  
  LIB=	geom
 +SHLIB_MAJOR= 1
