--- a/debian/rules
+++ b/debian/rules
@@ -36,9 +36,9 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 endif
 
 SOURCE = freebsd-libs
-SVN		:= https://svn0.us-west.freebsd.org/base/release/$(version).0
+#SVN		:= https://svn0.us-west.freebsd.org/base/release/$(version).0
 #SVN		:= https://svn0.us-west.freebsd.org/base/releng/$(version)
-#SVN		:= https://svn0.us-west.freebsd.org/base/stable/$(major)
+SVN		:= https://svn0.us-west.freebsd.org/base/stable/$(major)
 #SVN		:= https://svn0.us-west.freebsd.org/base/head
 ORIGDIR = $(SOURCE)-$(tar_version)
 TARNAME = $(SOURCE)_$(tar_version).orig.tar.gz
@@ -50,7 +50,7 @@ PMAKE_COMMON = \
 	MAKEFLAGS=$(BSD_MAKEFLAGS) \
 	NO_WERROR=1 NOGCCERROR=1 \
         NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) \
-	SHLIB_MAJOR=0 \
+	SHLIB_MAJOR=0 MK_TESTS=yes\
 	bmake \
 	$(NULL)
 PMAKE = \
