--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,9 @@ Source: freebsd-libs
 Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
-Uploaders: Aurelien Jarno <aurel32@debian.org>, Robert Millan <rmh@debian.org>
+Uploaders: Aurelien Jarno <aurel32@debian.org>,
+ Robert Millan <rmh@debian.org>,
+ Christoph Egger <christoph@debian.org>
 Build-Depends: debhelper (>= 7), pkg-config,
  bmake (>= 20131001-4~),
  m4,
@@ -10,7 +12,7 @@ Build-Depends: debhelper (>= 7), pkg-config,
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-31) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
- kfreebsd-kernel-headers (>= 10.0~2) [kfreebsd-any],
+ kfreebsd-kernel-headers (>= 10.1~1) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
  libexpat-dev [kfreebsd-any],
 # libncurses5-dev: needed by libalias
