Add myself to Uploaders
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5663 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,11 @@ Source: freebsd-libs
 Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
-Uploaders: Aurelien Jarno <aurel32@debian.org>,
+Uploaders:
+ Aurelien Jarno <aurel32@debian.org>,
  Robert Millan <rmh@debian.org>,
- Christoph Egger <christoph@debian.org>
+ Christoph Egger <christoph@debian.org>,
+ Steven Chamberlain <steven@pyro.eu.org>,
 Build-Depends: debhelper (>= 7), pkg-config,
  bmake (>= 20131001-4~),
  m4,
