Actually use the proper build architecture compiler (thanks, Helmut Grohne!)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5888 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,12 @@
 # -*- makefile -*-
 # Sample debian/rules that uses debhelper.
 
+# Determine host architecture compiler
+DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+ifeq ($(origin CC),default)
+CC := $(DEB_HOST_GNU_TYPE)-gcc
+endif
+
 SHELL = bash
 
 # Uncomment this to turn on verbose mode.
