Make sure get-orig-source aborts if any of the svn exports fail
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5889 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -87,7 +87,7 @@ get-orig-source:
 	         sys/sys/sbuf.h \
 		sys/netipx/ipx.h \
 	         share/misc/usb_hid_usages ; do \
-	    svn export --ignore-keywords -r $(svn_revision) $(SVN)/$$i $(ORIGDIR)/$$i ; \
+	    svn export --ignore-keywords -r $(svn_revision) $(SVN)/$$i $(ORIGDIR)/$$i || exit ; \
 	done
 	# Remove unused files with non GPL compatible license (eg BSD 4 clauses)
 	rm -f $(ORIGDIR)/sys/cam/scsi/scsi_ch.*
