Refresh patches: - 03_libsbuf.diff - makefiles.diff - pty_decls.diff
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5893 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/patches/makefiles.diff
+++ b/debian/patches/makefiles.diff
@@ -19,7 +19,7 @@
  MLINKS+= \
 --- a/lib/libutil/Makefile
 +++ b/lib/libutil/Makefile
-@@ -5,15 +5,11 @@
+@@ -5,16 +5,11 @@
  
  .include <bsd.own.mk>
  
@@ -29,7 +29,8 @@
  
  SRCS=	_secure_path.c auth.c expand_number.c flopen.c fparseln.c gr_util.c \
 -	hexdump.c humanize_number.c kinfo_getfile.c kinfo_getfile.c \
--	kinfo_getallproc.c kinfo_getproc.c kinfo_getvmmap.c kld.c \
+-	kinfo_getallproc.c kinfo_getproc.c kinfo_getvmmap.c \
+-	kinfo_getvmobject.c kld.c \
 -	login_auth.c login_cap.c \
 -	login_class.c login_crypt.c login_ok.c login_times.c login_tty.c \
 -	pidfile.c property.c pty.c pw_util.c quotafile.c realhostname.c \
@@ -37,7 +38,7 @@
  	stub.c trimdomain.c uucplock.c
  INCS=	libutil.h login_cap.h
  
-@@ -25,6 +21,14 @@
+@@ -26,6 +21,14 @@
  
  CFLAGS+= -I${.CURDIR} -I${.CURDIR}/../libc/gen/
  
@@ -51,7 +52,7 @@
 +
  MAN+=	expand_number.3 flopen.3 fparseln.3 hexdump.3 \
  	humanize_number.3 kinfo_getallproc.3 kinfo_getfile.3 \
- 	kinfo_getproc.3 kinfo_getvmmap.3 kld.3 login_auth.3 login_cap.3 \
+ 	kinfo_getproc.3 kinfo_getvmmap.3 kinfo_getvmobject.3 kld.3 \
 --- a/lib/libkvm/Makefile
 +++ b/lib/libkvm/Makefile
 @@ -5,6 +5,7 @@
